// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectThumbnail displays unavailable message when appropriate 1`] = `
<ObjectThumbnail
  pid="foo"
>
  <span
    style={
      Object {
        "float": "right",
      }
    }
  >
    No Thumbnail
  </span>
</ObjectThumbnail>
`;

exports[`ObjectThumbnail renders thumbnail when available 1`] = `
<ObjectThumbnail
  pid="foo"
>
  <img
    alt=""
    src="http://localhost/files/foo/THUMBNAIL"
    style={
      Object {
        "border": "1px solid black",
        "float": "right",
      }
    }
  />
</ObjectThumbnail>
`;
